--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,48 @@
         <maven.compiler.target>11</maven.compiler.target>
         <exec.mainClass>com.mycompany.jogos.Jogos</exec.mainClass>
     </properties>
+    <build>
+        <plugins> 
+            <plugin> 
+                <groupId>org.apache.maven.plugins</groupId> 
+                <artifactId>maven-jar-plugin</artifactId> 
+                <!--Atualização de versão-->
+                <version>3.3.0</version> 
+                <configuration> 
+                    <archive> 
+                        <manifest> 
+                            <addClasspath>true</addClasspath> 
+                            <mainClass>com.mycompany.jogos.Jogos</mainClass> 
+                        </manifest> 
+                    </archive> 
+                </configuration> 
+            </plugin> 
+            
+            <!--Inclusão das bibliotecas (dependências) no mesmo pacote JAR-->
+            <!--https://stackoverflow.com/a/41383973-->
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.mycompany.jogos.Jogos</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <!--cantina-1.0-SNAPSHOT-jar-with-dependencies.jar-->
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+            </plugin>
+            
+        </plugins> 
+    </build>
 </project>
